--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">P N SUMANTH</span><br> Cyber security <br>Enthusiast</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">P N SUMANTH</span><br> Cyber security <br>Enthusiast CDE </h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
